[package]
name = "onebrc"
version = "0.1.0"
edition = "2021"

[dependencies]
rayon = "1.10.0"

[dev-dependencies]
pretty_assertions = "1.4.0"
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "parse_lines"
harness = false

[[bench]]
name = "custom_parse_float"
harness = false

[profile.bench]
debug = true

[profile.release]
debug = true
